--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,5 +18,6 @@
         {% block body %}
         {# <img src="{{ asset('build/path_to_image.png') }}" alt=""/> #}
         {% endblock %}
+        <a href="{{ path('program_show', {id: 5}) }}">Afficher la page 5</a>
     </body>
 </html>
