--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -1,18 +1,21 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Série #{{ program.id }}{% endblock %}
-
+{% extends "base.html.twig" %}
+{% block title %}{{ program.title }}{% endblock %}
 {% block body %}
-    <div class="media">
-        <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
-        <div class="media-body">
-            <h1 class="mt-0">{{ program.title }}</h1>
-            <p>{{ program.summary }}</p>
-            <p>Catégorie : {{ program.category.name }}</p>
+<div class="media">
+    <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
+    <div class="media-body">
+        <h1 class="mt-0">{{ program.title }}</h1>
+        <p>{{ program.summary }}</p>
+        <p>Catégorie : {{ program.category.name }}</p>
+        {% if program.seasons %}
+            <p>Saisons :</p>
+            <ul>
+            {% for season in program.seasons %}
+                {% set url = path("program_season_show", { program: program.id, season: season.id }) %}
+                <li>{{ season.number }} / <a href="{{ url }}">{{ season.description }}</a> ({{ season.year }})</li>
+            {% endfor %}
+            </ul>
+            {% endif %}
         </div>
     </div>
-
-    <a href="{{ path('program_index') }}">
-        Retour à la liste des programmes
-    </a>
-{% endblock %}
+    {% endblock %}
