--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -27,6 +27,12 @@
             <a class="nav-link disabled">Disabled</a>
           </li>
         </ul>
+        {% if app.user %}
+    {{ app.user.email }}
+    <a href="{{ path('app_logout') }}"> Se déconnecter</a>
+{% else %}
+    <a href="{{ path('login') }}"> Se connecter</a>
+{% endif %}
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
