--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -21,6 +21,9 @@
               <li><a class="dropdown-item" href="#">Another action</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ path('actor_index') }}">Acteurs</a>
+              </li>
             </ul>
           </li>
           <li class="nav-item">
