--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -9,13 +9,22 @@
         <p>Catégorie : {{ program.category.name }}</p>
         {% if program.seasons %}
             <p>Saisons :</p>
+            <p><strong>Saisons</strong> :</p>
             <ul>
             {% for season in program.seasons %}
                 {% set url = path("program_season_show", { program: program.id, season: season.id }) %}
                 <li>{{ season.number }} / <a href="{{ url }}">{{ season.description }}</a> ({{ season.year }})</li>
             {% endfor %}
             </ul>
-            {% endif %}
-        </div>
+        {% endif %}
+        <strong>Acteurs :</strong>
+        <ul>
+            {% for actor in program.actors %}
+                <li>{{ actor.name }} </li>
+            {% else %}
+                <li>Aucun acteur pour cette série</li>
+            {% endfor %}
+        </ul>
     </div>
-    {% endblock %}
+</div>
+{% endblock %}
