--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -12,7 +12,7 @@
             <p><strong>Saisons</strong> :</p>
             <ul>
             {% for season in program.seasons %}
-                {% set url = path("program_season_show", { program: program.id, season: season.id }) %}
+                 {% set url = path("program_season_show", { program: program.slug, season: season.id }) %} 
                 <li>{{ season.number }} / <a href="{{ url }}">{{ season.description }}</a> ({{ season.year }})</li>
             {% endfor %}
             </ul>
